feat: signalR chat

--- a/Rentify.RazorWebApp/Pages/Admin/Rentals/Create.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Rentals/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rentify.RazorWebApp.Pages.Rentals.CreateModel
+@model Rentify.RazorWebApp.Pages.Admin.Rentals.CreateModel
 
 @{
     ViewData["Title"] = "Create";
