--- a/Rentify.RazorWebApp/Pages/Admin/Rentals/Delete.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Rentals/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Rentify.BusinessObjects.Enum
-@model Rentify.RazorWebApp.Pages.Rentals.DeleteModel
+@model Rentify.RazorWebApp.Pages.Admin.Rentals.DeleteModel
 
 @{
     ViewData["Title"] = "Create Rental";
