--- a/Rentify.RazorWebApp/Pages/Admin/Rentals/Details.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Rentals/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "{id}"
 @using Rentify.BusinessObjects.Enum
-@model Rentify.RazorWebApp.Pages.Rentals.DetailsModel
+@model Rentify.RazorWebApp.Pages.Admin.Rentals.DetailsModel
 
 @{
     ViewData["Title"] = "Rental Details";
