--- a/Rentify.RazorWebApp/Pages/Admin/Rentals/Edit.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Rentals/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "{id}"
 @using Rentify.BusinessObjects.Enum
-@model Rentify.RazorWebApp.Pages.Rentals.EditModel
+@model Rentify.RazorWebApp.Pages.Admin.Rentals.EditModel
 
 @{
     ViewData["Title"] = "Edit Rental";
