--- a/Rentify.RazorWebApp/Pages/Admin/Rentals/Index.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Rentals/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Rentify.BusinessObjects.Enum
-@model Rentify.RazorWebApp.Pages.Rentals.IndexModel
+@model Rentify.RazorWebApp.Pages.Admin.Rentals.IndexModel
 
 @{
     ViewData["Title"] = "Rentals";
