--- a/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
+++ b/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-page="/Items/Index">
+                                <a class="nav-link text-dark" asp-page="/CategoryPages/Index">
                                     <i class="fas fa-box me-1"></i>Loại
                                 </a>
                             </li>
@@ -118,6 +118,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    
+    <!-- Added SignalR script for chat functionality -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.min.js"></script>
+    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
