--- a/Rentify.RazorWebApp/Pages/_ViewImports.cshtml
+++ b/Rentify.RazorWebApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using Rentify.RazorWebApp
-@namespace MilkyShop.RazorWebApp.Pages
+﻿@namespace Rentify.RazorWebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
