--- a/Rentify.RazorWebApp/Pages/InquiryPages/Create.cshtml
+++ b/Rentify.RazorWebApp/Pages/InquiryPages/Create.cshtml
@@ -13,6 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="Inquiry.UserId" type="hidden" />
 
             <div class="form-group">
                 <label asp-for="Inquiry.PostId" class="control-label"></label>
